--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Navigation Links -->
         <ul class="nav-links">
-          <li><a href="htlm/mystory.html">我的故事</a></li>
+          <li><a href="html/mystory.html">我的故事</a></li>
           <li><a href="#">服務內容</a></li>
           <li><a href="#">課程</a></li>
           <li><a href="#">分享資源</a></li>
