--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="hero">
         <div class="arrow left" onclick="preview()">
           <img
-            src="PUBLIC/Images/Circled left.png"
+            src="public/Images/Circled left.png"
             width="30"
             feight="30"
             alt="arrow image to scroll left "
@@ -109,7 +109,7 @@
 
         <div class="arrow right" onclick="next()">
           <img
-            src="PUBLIC/Images/Circled Right.png"
+            src="public/Images/Circled Right.png"
             width="30"
             feight="30"
             alt="arrow-right"
@@ -130,7 +130,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="LIC/Images/candle.png" alt="Image description" />
+          <img src="public/Images/candle.png" alt="Image description" />
           <!-- Replace with your image path -->
         </div>
       </div>
@@ -139,10 +139,10 @@
       <div class="feature position">
         <img
           class="image1"
-          src="PUBLIC/Images/mystory-lila.png"
+          src="public/Images/mystory-lila.png"
           alt="activity"
         />
-        <img class="image2" src="PUBLIC/Images/brown.png" alt="Brown" />
+        <img class="image2" src="public/Images/brown.png" alt="Brown" />
       </div>
       <div class="feature">
         <h3>與大自然深度共鳴</h3>
@@ -153,7 +153,7 @@
       <div class="feature">
         <img
           class="image2"
-          src="PUBLIC/Images/activity2.jpg"
+          src="public/Images/activity2.jpg"
           alt="Meditation"
         />
       </div>
@@ -161,14 +161,14 @@
     <!-- feature1 -->
     <section id="features1">
       <div class="feature1 feature-left">
-        <img class="image" src="PUBLIC/Images/yoga.png" alt="Tree" />
+        <img class="image" src="public/Images/yoga.png" alt="Tree" />
       </div>
       <div class="feature1 feature-right">
         <h3>心靈修行的轉變</h3>
         <div class="icons-container">
           <div class="icon">
             <img
-              src="PUBLIC/Images/Fire Heart.png"
+              src="public/Images/Fire Heart.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -181,7 +181,7 @@
           </div>
           <div class="icon">
             <img
-              src="PUBLIC/Images/Floating Guru.png"
+              src="public/Images/Floating Guru.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -193,7 +193,7 @@
           </div>
           <div class="icon">
             <img
-              src="PUBLIC/Images/Lotus.png"
+              src="public/Images/Lotus.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -206,7 +206,7 @@
 
           <div class="icon icon-4">
             <img
-              src="PUBLIC/Images/Irrigation.png"
+              src="public/Images/Irrigation.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -235,7 +235,7 @@
           <p>時長: 90分鐘。</p>
           <div class="moreBTN">
             <img
-              src="PUBLIC/Images/Forward Button.png"
+              src="public/Images/Forward Button.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -243,7 +243,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="PUBLIC/Images/course2.png" alt="能量提升" />
+          <img src="public/Images/course2.png" alt="能量提升" />
           <h4>能量提升</h4>
           <p>
             重點放在激活和提升內在能量的練習，身體上如Kriyas（動作序列）、呼吸技巧和冥想。
@@ -251,7 +251,7 @@
           <p>時長: 60分鐘。</p>
           <div class="moreBTN">
             <img
-              src="PUBLIC/Images/Forward Button.png"
+              src="public/Images/Forward Button.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -259,7 +259,7 @@
           </div>
         </div>
         <div class="course">
-          <img src="PUBLIC/Images/course3.png" alt="解壓放鬆" />
+          <img src="public/Images/course3.png" alt="解壓放鬆" />
           <h4>解壓放鬆</h4>
           <p>
             專注於緩解壓力和放鬆，使用深度冥想、音頻療法（如聲音碟）、輕柔的體位法和放鬆技巧。
@@ -267,7 +267,7 @@
           <p>時長: 90分鐘。</p>
           <div class="moreBTN">
             <img
-              src="PUBLIC/Images/Forward Button.png"
+              src="public/Images/Forward Button.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -276,7 +276,7 @@
         </div>
 
         <div class="course course-4">
-          <img src="PUBLIC/Images/course4.png" alt="感激冥想" />
+          <img src="public/Images/course4.png" alt="感激冥想" />
           <h4>基礎入門</h4>
           <p>
             當我們的內在能量達到一定的頻率時，吸引力源於自我真實和內在的光輝。感激與自信使內在變得更加愉快和充實。
@@ -284,7 +284,7 @@
           <p>時長: 90分鐘。</p>
           <div class="moreBTN">
             <img
-              src="PUBLIC/Images/Forward Button.png"
+              src="public/Images/Forward Button.png"
               alt="Icon 1"
               width="50px"
               height="50px"
@@ -301,7 +301,7 @@
       <h4>我們誠摯邀請你/妳參與成長，在旅程中感受到內心的寧靜與愉悅。</h4>
       <div class="event-container">
         <div class="event">
-          <img src="PUBLIC/Images/event1.jpg" alt="基礎入門" />
+          <img src="public/Images/event1.jpg" alt="基礎入門" />
           <div class="event-detail">
             <h4>中秋滿月冥想 - 迎來豐盛</h4>
             <p>活動地點: 台北信義區</p>
@@ -313,7 +313,7 @@
             <div class="moreBTN">
               <p>更多內容</p>
               <img
-                src="PUBLIC/Images/Forward Button.png"
+                src="public/Images/Forward Button.png"
                 alt="Icon 1"
                 width="50px"
                 height="50px"
@@ -323,7 +323,7 @@
         </div>
 
         <div class="event">
-          <img src="PUBLIC/Images/event2.jpg" alt="能量提升" />
+          <img src="public/Images/event2.jpg" alt="能量提升" />
           <div class="event-detail">
             <h4>豐盛與自我能量的旅程</h4>
             <p>活動地點: 台中烏日</p>
@@ -334,7 +334,7 @@
             <div class="moreBTN">
               <p>更多內容</p>
               <img
-                src="PUBLIC/Images/Forward Button.png"
+                src="public/Images/Forward Button.png"
                 alt="Icon 1"
                 width="50px"
                 height="50px"
@@ -344,7 +344,7 @@
         </div>
 
         <div class="event">
-          <img src="PUBLIC/Images/event3.jpg" alt="解壓放鬆" />
+          <img src="public/Images/event3.jpg" alt="解壓放鬆" />
           <div class="event-detail">
             <h4>淨身能量的淨化儀式</h4>
             <p>活動地點: 高雄三民</p>
@@ -355,7 +355,7 @@
             <div class="moreBTN">
               <p>更多內容</p>
               <img
-                src="PUBLIC/Images/Forward Button.png"
+                src="public/Images/Forward Button.png"
                 alt="Icon 1"
                 width="50px"
                 height="50px"
