--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               href="https://www.youtube.com/@%E5%BF%83%E7%9A%84%E6%97%8B%E5%BE%8BBlissflow"
               target="_blank"
               ><img
-                src="public/images/YouTube.png"
+                src="public/Images/YouTube.png"
                 alt="youtube"
                 width="30"
                 height="30"
