--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
           <li>
             <a href="" target="_blank"
               ><img
-                src="public/images/Instagram.png"
+                src="public/Images/Instagram.png"
                 alt="instagram"
                 width="30"
                 height="30"
@@ -496,7 +496,7 @@
           <li>
             <a href="" target="_blank"
               ><img
-                src="public/images/LINE.png"
+                src="public/Images/LINE.png"
                 alt="line"
                 width="30"
                 height="30"
@@ -518,7 +518,7 @@
           <li>
             <a href="#" target="_blank"
               ><img
-                src="public/images/Facebook.png"
+                src="public/Images/Facebook.png"
                 alt="facebook"
                 width="30"
                 height="30"
