--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <h4>適合各種程度的練習者 • 我們的課程都專注於培養身心靈的整體健康</h4>
       <div class="course-container">
         <div class="course">
-          <img src="LIC/Images/course1.png" alt="基礎入門" />
+          <img src="public/Images/course1.png" alt="基礎入門" />
           <h4>基礎入門</h4>
           <p>
             介紹Kundalini瑜伽的基本概念和歷史，簡單的呼吸練習，基本的體位法，和冥想。
@@ -405,7 +405,7 @@
 
       <div class="contactArea">
         <div class="semicircle">
-          <img src="public/images/contatc-image.png" alt="Your Image" />
+          <img src="public/Images/contatc-image.png" alt="Your Image" />
         </div>
 
         <div class="container">
