--- a/html/mystory.html
+++ b/html/mystory.html
@@ -31,7 +31,7 @@
           <div></div>
           <div></div>
         </div>
-        <a href="../HTML/index.html" class="logo"> BlissFlow </a>
+        <a href="../index.html" class="logo"> BlissFlow </a>
 
         <!-- Navigation Links -->
         <ul class="nav-links">
