--- a/html/mystory.html
+++ b/html/mystory.html
@@ -16,9 +16,9 @@
       href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="public/Style/base.css" />
-    <link rel="stylesheet" href="public/Style/breakpoint.css" />
-    <link rel="stylesheet" href="public/Style/mystory.css" />
+    <link rel="stylesheet" href="../public/Style/base.css" />
+    <link rel="stylesheet" href="../public/Style/breakpoint.css" />
+    <link rel="stylesheet" href="../public/Style/mystory.css" />
     <script src="../action.js" defer></script>
   </head>
   <body>
