--- a/html/mystory.html
+++ b/html/mystory.html
@@ -190,7 +190,7 @@
           <li>
             <a href="" target="_blank"
               ><img
-                src="../public/images/Instagram.png"
+                src="../public/Images/Instagram.png"
                 alt="instagram"
                 width="30"
                 height="30"
@@ -200,7 +200,7 @@
           <li>
             <a href="" target="_blank"
               ><img
-                src="../public/images/LINE.png"
+                src="../public/Images/LINE.png"
                 alt="line"
                 width="30"
                 height="30"
@@ -210,7 +210,7 @@
           <li>
             <a href="" target="_blank"
               ><img
-                src="../public/images/YouTube.png"
+                src="../public/Images/YouTube.png"
                 alt="youtube"
                 width="30"
                 height="30"
@@ -220,7 +220,7 @@
           <li>
             <a href="#" target="_blank"
               ><img
-                src="../public/images/Facebook.png"
+                src="../public/Images/Facebook.png"
                 alt="facebook"
                 width="30"
                 height="30"
